--- a/assetecFront/src/app/resultados/resultados.component.html
+++ b/assetecFront/src/app/resultados/resultados.component.html
@@ -59,7 +59,7 @@
             </p>
             <h3>{{dataService.proyecto.nombre}}</h3>
             <h4>Reporte del Proyecto</h4>
-            <p>{{dataService.reporte}}</p>
+            <p *ngFor="let item of dataService.reporte">{{item}}</p>
             <h4>Reporte de las Actividades</h4>
             <p *ngFor="let item of dataService.datos">{{item}}</p>
             <h4>Reporte de los Gastos</h4>
