--- a/assetecFront/src/app/LlenarYEnviarActa/acta.component.html
+++ b/assetecFront/src/app/LlenarYEnviarActa/acta.component.html
@@ -77,7 +77,7 @@
             <div class="card single-accordion">
               <div class="card-header" >
                 <h5 class="mb-0">
-                  <button class="btn btn-link" type="button" (click)="listaAcuerdos[listaAcuerdos.length] = acuerdo">
+                  <button class="btn btn-link" type="button" (click)="listaAcuerdos[listaAcuerdos.length] = acuerdo; acuerdo = ''">
                     Agregar nuevo acuerdo
                   </button>
                 </h5>
@@ -96,7 +96,7 @@
           </div>
         </div>
         <div class="cart-buttons">
-          <p><input type="submit" value="Enviar Acta" (click)="acta.codigoProyecto = dataService.proyecto.codigoProyecto; acta.acuerdos = listaAcuerdos; enviarActa()"></p>
+          <p><input type="submit" value="Enviar Acta" (click)="enviarActa()"></p>
         </div>
       </div>
     </div>
